--- a/TP2/styles/styles.css
+++ b/TP2/styles/styles.css
@@ -5,15 +5,23 @@
     --primaryColor: #4907A1;
     --primaryColorDark1: #3E0589;
     --primaryColorDark2: #330472;
-    
     --secondaryColorLight2: #756F6F;
     --secondaryColorLight1: #767279;
     --secondaryColor: #3F3C3C;
     --secondaryColorDark1: #252525;
     --secondaryColorDark2: #252525;
+    --black:#100B16;
+    --white:#F8F3FF;
+    --hightLight:#FFC300;
+    --success:#04AA6D;
+    --error:#FF2020;
+    --warning:#FFE141;
 
-    
-    --tamaño-fuente: 16px;
+    --familyFontNunito:'Nunito Sans', sans-serif;
+    --buttonText{
+        font-family: var(--familyFontNunito);
+        height: 14px;
+    }
 }
 
 
@@ -21,15 +29,36 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family:'Nunito Sans', sans-serif;
+    background-color: var(--black);
+}
+
+h1 {
+    font-family: var(--familyFontNunito);
+    height: 48px;
+}
+
+h2 {
+    font-family: var(--familyFontNunito);
+    height: 32px;
+}
+
+h3 {
+    font-family: var(--familyFontNunito);
+    height: 24px;
+}
+
+text{
+    font-family: var(--familyFontNunito);
+    height: 14px;
 }
 
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
-    color: #fff;
+    background-color:var(--secondaryColor);
+    color: var(--secondaryColor);
     padding: 10px 20px;
 }
 
@@ -84,8 +113,8 @@ input[type="text"] {
 
 .cart-button,
 .profile-button {
-    background-color: #555;
-    color: #fff;
+    background-color: var(--primaryColor);
+    color: var(--primaryColor);
     border: none;
     border-radius: 5px;
     padding: 8px 12px;
@@ -105,10 +134,11 @@ input[type="text"] {
     flex: 0 0 70%;
     margin: 10px;
     scroll-snap-align: start;
-    background-color: #fff;
+    background-color:var(--secondaryColor);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     text-align: center;
     position: relative;
+    border-radius: 3%;
 }
 
 .card img {
@@ -158,10 +188,11 @@ input[type="text"] {
     width: calc(25% - 20px); /* Para mostrar 4 tarjetas por fila con un espacio de 20px entre ellas */
     height: 300px;
     margin: 10px;
-    background-color: #fff;
+    background-color: var(--secondaryColor);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     text-align: center;
     transition: transform 0.2s ease-in-out;
+    border-radius: 3%;
 }
 
 .gallery-card img {
