--- a/TP2/styles/styles.css
+++ b/TP2/styles/styles.css
@@ -53,6 +53,15 @@ text{
     height: 14px;
 }
 
+footer {
+    height: 685px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: linear-gradient(to bottom, var(--black) 0%, var(--primaryColor));
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
