footer fixed, js spa

--- a/TP2/styles/styles.css
+++ b/TP2/styles/styles.css
@@ -24,8 +24,6 @@
     }
 }
 
-
-
 body {
     margin: 0;
     padding: 0;
@@ -55,7 +53,7 @@ text{
 
 footer {
     height: 685px;
-    position: fixed;
+    position:static;
     bottom: 0;
     left: 0;
     width: 100%;
