--- a/TP2/styles/styles.css
+++ b/TP2/styles/styles.css
@@ -215,8 +215,9 @@ input[type="text"] {
 
 .gallery-card img {
     width: 100%;
-    max-height: 240px;
+    height: 230px;
     object-fit: cover;
+    border-radius: 3%;
 }
 
 .gallery-card-details {
@@ -385,3 +386,80 @@ footer {
 .network-logo{
     background-blend-mode: exclusion;
 }
+
+/* .pdp-container{
+    width: 1200px;
+    height: 600px;
+    background-color: var(--secondaryColor);
+    opacity: 0.8;
+}
+
+.pdp-container .left-column{
+    width: 400px;
+    height: 500px;
+}
+
+.pdp-container .right-column{
+    width: 750px;
+    height: 500px;
+    display: flex;
+} */
+
+.login-register {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 20px;
+}
+
+.pdp-container {
+    display: flex;
+    align-items: flex-start;
+    max-width: 1200px; 
+    height: 600px;
+    background-color: transparent;
+}
+
+.left-column {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 400px;
+    height: 600px;
+    background-color: var(--secondaryColor);
+    opacity: 0.8;
+    border-radius: 3px;
+    padding-right: 30px;
+    margin-right: 30px;
+}
+
+.right-column {
+    flex: 1;
+    padding: 20px; 
+    width: 750px;
+    height: 600px;
+    background-color: var(--secondaryColor);
+    opacity: 0.8;
+    border-radius: 3px;
+}
+
+.main-image {
+    
+    width: 100%; 
+    height: auto;
+
+}
+
+.small-image {
+    max-width: 20%; 
+    height: auto;
+    margin-top: 10px;
+    display: flex;
+}
+
+.description {
+    padding: 20px; 
+    border-radius: 5px;
+}
+ 
