--- a/TP2/styles/styles.css
+++ b/TP2/styles/styles.css
@@ -98,7 +98,7 @@ footer {
     justify-content: center;
 }
 
-input[type="text"] {
+input {
     padding: 8px;
     border: none;
     border-radius: 5px;
@@ -129,16 +129,37 @@ input[type="text"] {
     margin-left: 10px;
     cursor: pointer;
 }
+
 .carousel-container {
     display: flex;
     justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
+#arrow-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 500px;
+    width: 50px;
+    padding-bottom: 150px;
+}
+#arrow-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 500px;
+    width: 50px;
+    text-align: end;
+    padding-bottom: 150px;
 }
 
 .carousel {
     height: 650px;
     margin: 100px 0 100px 0;
     display: flex;
-    overflow-x: auto;
+    overflow-x: visible;
     width: 100%;
     max-width: 1200px;
 }
@@ -281,12 +302,25 @@ input[type="text"] {
     border: 00;
     background-color: var(--secondaryColorLight1);
     height: 20px;
-    width: 200px;
+    width: 360px;
     color: var(--white);
 }
 
 .userForm input::placeholder {
     color:var(--secondaryColorLight2);
+}
+
+.loginForm{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+.loginForm div p{
+    margin-block-start: 0;
+    
+}
+.loginForm div{
+    height: fit-content;
 }
 
 .button-primary {
@@ -304,6 +338,7 @@ input[type="text"] {
     font-weight: 800;
     line-height: normal;
 }
+
 
 .button-primary:hover {
     border: 1px solid var(--black);
@@ -445,3 +480,28 @@ footer {
     border-radius: 5px;
 }
  
+.game-container{
+    display: flex;
+    width: 800px;
+    height: 800px;
+    justify-content: center;
+}
+
+.game-container img {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.addCart {
+    background-color: transparent;
+    size: 40px;
+    justify-content:center;
+    vertical-align: middle;
+    border: 00;
+}
+
+.addCart i {
+    size: 40px;
+    color: var(--white);
+}
