--- a/TP2/styles/styles.css
+++ b/TP2/styles/styles.css
@@ -119,15 +119,21 @@ input {
     align-items: center;
 }
 
-.cart-button,
-.profile-button {
-    background-color: var(--primaryColor);
-    color: var(--primaryColor);
-    border: none;
-    border-radius: 5px;
+.cart-button {
+    background-color: transparent;
+    color: var(--white);
     padding: 8px 12px;
     margin-left: 10px;
     cursor: pointer;
+    border: 00;
+}
+
+.profile-button {
+    background-color: transparent;
+    padding: 8px 12px;
+    margin-left: 10px;
+    border-radius: 100%;
+    border-color: var(--white);
 }
 
 .carousel-container {
@@ -184,6 +190,8 @@ input {
     width: 100%;
     height: 70%;
     object-fit: cover;
+    border-top-left-radius: 3%;
+    border-top-right-radius: 3%;
 }
 
 .card-details {
@@ -191,12 +199,15 @@ input {
 }
 
 .card h3 {
+    padding-bottom: 40px;
     margin: 0;
 }
 
 .card-price {
+    padding-right: 200px;
+    display: inline;
     font-weight: bold;
-    color: #555;
+    color: var(--white);
 }
 
 .card:hover {
@@ -241,6 +252,10 @@ input {
     border-radius: 3%;
 }
 
+.gallery-card .card-price {
+    padding-right: 155px;
+}
+
 .gallery-card-details {
     padding: 10px;
 }
@@ -254,8 +269,12 @@ input {
 }
 
 .login-register {
-    height: 900px;
     background-color: var(--black);
+    background-image:url("../images/logo.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size:900px;
+    height: 900px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -443,7 +462,7 @@ footer {
     flex-direction: column;
     align-items: flex-start;
     width: 400px;
-    height: 600px;
+    height:100%;
     background-color: var(--secondaryColor);
     opacity: 0.8;
     border-radius: 3px;
@@ -455,7 +474,7 @@ footer {
     flex: 1;
     padding: 20px; 
     width: 750px;
-    height: 600px;
+    height: 93.3%;
     background-color: var(--secondaryColor);
     opacity: 0.8;
     border-radius: 3px;
