--- a/TP2/styles/navBar.css
+++ b/TP2/styles/navBar.css
@@ -50,3 +50,21 @@
     display: flex;
     align-items: center;
 }
+
+
+.cart-button {
+    background-color: transparent;
+    color: var(--white);
+    padding: 8px 12px;
+    margin-left: 10px;
+    cursor: pointer;
+    border: 00;
+}
+
+.profile-button {
+    background-color: transparent;
+    padding: 8px 12px;
+    margin-left: 10px;
+    border-radius: 100%;
+    border-color: var(--white);
+}
