--- a/TP2/styles/styles.css
+++ b/TP2/styles/styles.css
@@ -1,5 +1,10 @@
 @import url('fototer.css');
 @import url('navBar.css');
+@import url('carousel.css');
+@import url('galery.css');
+@import url('pdp.css');
+@import url('logIn.css');
+@import url('gamePage.css');
 
 :root {
     --primaryColorLight2: #6716D2;
@@ -64,233 +69,6 @@ input {
     margin-right: 10px;
 }
 
-.cart-button {
-    background-color: transparent;
-    color: var(--white);
-    padding: 8px 12px;
-    margin-left: 10px;
-    cursor: pointer;
-    border: 00;
-}
-
-.profile-button {
-    background-color: transparent;
-    padding: 8px 12px;
-    margin-left: 10px;
-    border-radius: 100%;
-    border-color: var(--white);
-}
-
-.carousel-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-}
-
-#arrow-left {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 500px;
-    width: 50px;
-    padding-bottom: 150px;
-}
-
-#arrow-right {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 500px;
-    width: 50px;
-    text-align: end;
-    padding-bottom: 150px;
-}
-
-.carousel {
-    height: 650px;
-    margin: 100px 0 100px 0;
-    display: flex;
-    overflow-x: visible;
-    width: 100%;
-    max-width: 1200px;
-}
-
-.carousel::-webkit-scrollbar{
-    display: none;
-}
-
-.card {
-    max-width: 400px;
-    height: 500px;
-    flex: 0 0 70%;
-    margin: 10px;
-    scroll-snap-align: start;
-    background-color:var(--secondaryColor);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    position: relative;
-    border-radius: 3%;
-}
-
-.card img {
-    width: 100%;
-    height: 70%;
-    object-fit: cover;
-    border-top-left-radius: 3%;
-    border-top-right-radius: 3%;
-}
-
-.card-details {
-    padding: 10px;
-}
-
-.card h3 {
-    padding-bottom: 40px;
-    margin: 0;
-}
-
-.card-price {
-    padding-right: 200px;
-    display: inline;
-    font-weight: bold;
-    color: var(--white);
-}
-
-.card:hover {
-    transform: scale(1.05);
-}
-
-.add-to-cart {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 8px 12px;
-    cursor: pointer;
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-}
-
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.gallery-card {
-    width: calc(25% - 20px); /* Para mostrar 4 tarjetas por fila con un espacio de 20px entre ellas */
-    height: 300px;
-    margin: 10px;
-    background-color: var(--secondaryColor);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    transition: transform 0.2s ease-in-out;
-    border-radius: 3%;
-}
-
-.gallery-card img {
-    width: 100%;
-    height: 230px;
-    object-fit: cover;
-    border-radius: 3%;
-}
-
-.gallery-card .card-price {
-    padding-right: 155px;
-}
-
-.gallery-card-details {
-    padding: 10px;
-}
-
-.gallery-card h3 {
-    margin: 0;
-}
-
-.gallery-card:hover {
-    transform: scale(1.05);
-}
-
-.login-register {
-    background-color: var(--black);
-    background-image:url("../images/logo.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size:900px;
-    height: 900px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.login-register img {
-    z-index: 2;
-}
-
-.d-flex{
-    display: flex;
-}
-
-.d-none{
-    display: none;
-}
-
-.userForm{
-    height: 340px;
-    width: 600px;
-    background-color: var(--secondaryColor);
-    opacity: 0.8;
-    z-index: 1;
-    justify-content: center;
-    border-radius: 3%;
-}
-
-#registerForm {
-    height: 800px;
-}
-
-.userForm p {
-    color: var(--white);
-    padding-top: 10px;
-}
-
-.userForm div {
-    padding-bottom: 10px; 
-    height: 60px;  
-}
-
-.userForm input {
-    border-radius: 30px;
-    border: 00;
-    background-color: var(--secondaryColorLight1);
-    height: 20px;
-    width: 360px;
-    color: var(--white);
-}
-
-.userForm input::placeholder {
-    color:var(--secondaryColorLight2);
-}
-
-.loginForm{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-
-.loginForm div p{
-    margin-block-start: 0;
-    
-}
-
-.loginForm div{
-    height: fit-content;
-}
-
 .button-primary {
     width: 157px;
     height: 41px;
@@ -330,134 +108,6 @@ input {
 .button-secondary:hover {
     border: var(--white);
     border: solid 1px ;
-}
-
-footer {
-    color: var(--white);
-    display: flex;
-    bottom: 0;
-    height: 350px;
-    width: 100%;
-    align-items: flex-end;
-}
-
-.footer-list-container {
-    width: 70%;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.footer-list {
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.footer-list ul {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.footer-message {
-    height: 300px;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: space-evenly;
-    width: 30%;
-    padding: 15px;
-    margin-left: 30px;
-}
-
-.footer-message h3 {
-    margin-left: 45px;
-    height: fit-content;
-    text-align: center;
-}
-
-.footer-networks {
-    align-items: flex-start;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
-
-.network-logo {
-    background-blend-mode: exclusion;
-}
-
-.login-register {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    padding: 20px;
-}
-
-.pdp-container {
-    display: flex;
-    align-items: flex-start;
-    max-width: 1200px; 
-    height: 600px;
-    background-color: transparent;
-}
-
-.left-column {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 400px;
-    height:100%;
-    background-color: var(--secondaryColor);
-    opacity: 0.8;
-    border-radius: 3px;
-    padding-right: 30px;
-    margin-right: 30px;
-}
-
-.right-column {
-    flex: 1;
-    padding: 20px; 
-    width: 750px;
-    height: 93.3%;
-    background-color: var(--secondaryColor);
-    opacity: 0.8;
-    border-radius: 3px;
-}
-
-.main-image {
-    
-    width: 100%; 
-    height: auto;
-
-}
-
-.small-image {
-    max-width: 20%; 
-    height: auto;
-    margin-top: 10px;
-    display: flex;
-}
-
-.description {
-    padding: 20px; 
-    border-radius: 5px;
-}
- 
-.game-container{
-    display: flex;
-    width: 800px;
-    height: 800px;
-    justify-content: center;
-}
-
-.game-container img {
-    display: flex;
-    width: 100%;
-    height: 100%;
 }
 
 .addCart {
