--- a/TP2/styles/logIn.css
+++ b/TP2/styles/logIn.css
@@ -1,7 +1,7 @@
 
 .login-register {
     background-color: var(--black);
-    background-image:url("../images/logo.svg");
+    background-image:url("../icons/logo.svg");
     background-repeat: no-repeat;
     background-position: center;
     background-size:900px;
