--- a/TP2/styles/navBar.css
+++ b/TP2/styles/navBar.css
@@ -8,6 +8,11 @@
     padding: 10px 20px;
 }
 
+.navbar .logo-container{
+    display: flex;
+    flex-wrap: nowrap;
+}
+
 .navbar-logo img{
     display: flex;
     align-items: center;
@@ -29,7 +34,7 @@
     justify-content: center;
     background-color:#767279;
     border-radius: 40px;
-    width:200px;
+    max-width:360px;
 }
 
 .navbar-search input::placeholder{
