--- a/TP2/styles/styles.css
+++ b/TP2/styles/styles.css
@@ -5,6 +5,7 @@
 @import url('pdp.css');
 @import url('logIn.css');
 @import url('gamePage.css');
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&family=Roboto:wght@100&display=swap");
 
 :root {
     --primaryColorLight2: #6716D2;
@@ -122,3 +123,17 @@ input {
     size: 40px;
     color: var(--white);
 }
+
+*::-webkit-scrollbar {
+    width: 12px;       
+    height: 0;        
+}
+*::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+*::-webkit-scrollbar-thumb {
+    background-color: var(--primaryColorDark2);
+    border-radius: 20px;
+    border: 3px solid var(--black);
+}
+
