--- a/TP2/styles/pdp.css
+++ b/TP2/styles/pdp.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: flex-start;
     max-width: 1200px; 
-    height: 600px;
+    height: 400px;
     background-color: transparent;
 }
 
@@ -17,7 +17,6 @@
     background-color: var(--secondaryColor);
     opacity: 0.8;
     border-radius: 3px;
-    padding-right: 30px;
     margin-right: 30px;
 }
 
@@ -25,7 +24,7 @@
     flex: 1;
     padding: 20px; 
     width: 750px;
-    height: 93.3%;
+    height: calc(100% - 40px);
     background-color: var(--secondaryColor);
     opacity: 0.8;
     border-radius: 3px;
@@ -49,4 +48,8 @@
     padding: 20px; 
     border-radius: 5px;
 }
- 
+
+.images-container{
+    display: flex;
+    justify-content: space-between;
+}
