--- a/TP2/styles/galery.css
+++ b/TP2/styles/galery.css
@@ -45,11 +45,12 @@
 
 .added{
     position: absolute;
-    right: -6px;
+    right: -13px;
     top: 10px;
     z-index: 10;
     background-color: var(--highLight);
     rotate: 30deg;
+    padding: 2px 6px;
 }
 
 .line1{
