--- a/TP2/styles/carousel.css
+++ b/TP2/styles/carousel.css
@@ -6,6 +6,11 @@
     overflow: hidden;
 }
 
+
+.carousel-card-container{
+    overflow: hidden;
+}
+
 #arrow-left {
     display: flex;
     flex-direction: column;
@@ -89,4 +94,43 @@
     position: absolute;
     bottom: 10px;
     right: 10px;
+}
+
+@media (max-width: 800px) {
+
+    .card {
+        max-width: 400px;
+        height: 400px;
+        flex: 0 0 70%;
+        margin: 10px;
+        scroll-snap-align: start;
+        background-color:var(--secondaryColor);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        text-align: center;
+        position: relative;
+        border-radius: 3%;
+    }
+
+    .card .button-secondary{
+        width: 100%;
+        margin-bottom: 24px;
+    }
+    
+    .card-details{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .card-price{
+        display: flex;
+        padding-right: 0;
+        align-items: center;
+    }
+
+    .carousel-card-container{
+        overflow: hidden;
+        height: 650px;
+    }
+
 }
