--- a/TP2/styles/navBar.css
+++ b/TP2/styles/navBar.css
@@ -133,8 +133,12 @@
 color: var(--white);
 padding: 12px 16px;
 text-decoration: none;
-display: block;
+display: flex;
 }
+
+.dropdown-content .option p {
+    padding-left: 10px;
+    }
 
 .dropdown-content .option:hover {background-color: var(--primaryColor)}
 
@@ -173,4 +177,12 @@ display: block;
 
 #breadcrumbs a:hover {
     text-decoration: underline;
+}
+
+@media (max-width: 800px) {
+
+    .navbar-search {
+        display: none;
+    }
+
 }
